<resources>
    <string name="app_name">Projet</string>
    <string name="title_activity_nologin">Nologin</string>
    <string name="title_activity_logged">Logged</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="help_text">Besoin d\'aide? Contactez-nous</string>
    <string name="description">Capturer vos moments préférés à l\'instant et laissez nous garder précieusement vos souvenirs. Avec Souv\'near, n\'oubliez ni les moments ni les lieux de vos souvenirs. Nous vous les rappellerons !</string>
    <string name="mon_compte">Mon compte</string>
    <string name="mes_souvenirs">Mes souvenirs</string>
    <string name="aide">Aide</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">S\'inscrire</string>
    <string name="log_in">Se connecter</string>
    <string name="mdp">Mot de passe</string>
    <string name="no_log">Continuer sans se connecter</string>
    <string name="error">Compte inexistant ou informations incorrectes</string>
    <string name="sign_in">Inscription</string>
    <string name="phone">Téléphone</string>
    <string name="error_sign">Veuillez remplir tous les champs</string>
    <string name="new_souv">Nouveau souvenir</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="nom">Nom</string>
    <string name="titre">Titre</string>
    <string name="description_photo">Description</string>
    <string name="supprimer">Supprimer</string>
    <string name="partager">Partager</string>
    <string name="list">Liste</string>
    <string name="menu_profil">Mon compte</string>
    <string name="modif_profil">Modifier profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="annuler">Annuler</string>
    <string name="save">Enregistrer</string>
</resources>