<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/mon_compte" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/mes_souvenirs" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/aide" />
    </group>
    <item
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/disconnect" />
</menu>